Update webUI to eliminate `touch-action` issues on mobile
*   Introduce `touch-action: none` to our CSS implementation to reduce
    browser overrides for swipe actions.
*   Force `overscroll-behavior: none` to reduce browser window
    overscroll

Bug: 205773710
Fixes: 205773710
Test: Build + boot + interact

--- a/host/frontend/webrtc_operator/assets/style.css
+++ b/host/frontend/webrtc_operator/assets/style.css
@@ -17,6 +17,8 @@
 body {
   background-color:black;
   margin: 0;
+  touch-action: none;
+  overscroll-behavior: none;
 }
 
 #device-selector {
